--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.8",
     "@types/mdx": "^2.0.13",
+    "axios": "^1.7.7",
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
+    "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
